--- a/WebApplication3/Views/Home/Privacy.cshtml
+++ b/WebApplication3/Views/Home/Privacy.cshtml
@@ -1,14 +1,146 @@
 ﻿@{
-    ViewData["Title"] = "Polityka Prywatności";
+    ViewData["Title"] = "Privacy Policy";
 }
 @section PageHead{
     <div class="container">
-        <h3>Witaj, to jest @ViewData["Title"] tej aplikacji</h3>
-        <h4>Tu dowiesz się, co Ci wolno, a czego nie powinienieś robić!</h4>
+        <h3>Hello, this is the @ViewData["Title"] section of this app</h3>
+        <h4>Your rights and obligations are stated below.</h4>
     </div>
 }
 
-<div class="text-center">
+<div class="text-center" id="top">
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <p>Meh.</p>
+    <h2>Topics:</h2>
+    <p><a href="#what">What data do we collect?</a></p>
+    <p><a href="#collect">How do we collect your data?</a></p>
+    <p><a href="#use"> How will we use your data?</a></p>
+    <p><a href="#store">How do we store your data?</a></p>
+    <p><a href="#rights">What are your data protection rights?</a></p>
+    <p><a href="#cookies">What are cookies?How do we use cookies? </a></p>
+    <p><a href="#contact">How to contact us.</a></p>
+
+</div>
+
+<div class="text-justify" id="what">
+    <h3> What data do we collect?</h3>
+    <p>Our Company collects the following data:</p>
+    <ul class="text-center">
+        <li> Personal identification information (Name, email address etc.)</li>
+    </ul>
+    <p class="text-center"><a href="#top"> Back to top</a></p>
+</div>
+<div class="text-justify" id="collect">
+    <h3>        How do we collect your data?    </h3>
+    <p> You directly provide Our Company with most of the data we collect. We collect data and process data when you:</p>
+    <p>
+        Register online or place an order for any of our products or services.
+        Use or view our website via your browser’s cookies.
+    </p>
+    <p class="text-center"><a href="#top"> Back to top</a></p>
+</div>
+
+<div class="text-justify" id="use">
+    <h3> How will we use your data?</h3>
+    <p>Our Company collects your data so that we can:</p>
+    <p>
+        <ul class="text-center">
+            <li>Process your order and manage your account.</li>
+            <li>
+                Email you with special offers on other products and services we think you might like.
+            </li>
+        </ul>
+    </p>
+    <p class="text-center"><a href="#top"> Back to top</a></p>
+</div>
+<div class="text-justify" id="store">
+    <h3> How do we store your data?</h3>
+    <p>
+        Our Company securely stores your data at the app server.
+    </p>
+
+    <p> Our Company will keep your email address for indefinite time period. Once this time period has expired, we will delete your data.</p>
+
+    <p class="text-center"><a href="#top"> Back to top</a></p>
+</div>
+<div class="text-justify" id="rights">
+    <h3> What are your data protection rights?</h3>
+    <p>
+        Our Company would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:
+    </p>
+    <ul class="text-center">
+        <li>
+            <em>The right to access</em> – You have the right to request Our Company for copies of your personal data. We may charge you a small fee for this service.
+        </li>
+        <li>
+            <em>The right to rectification</em> – You have the right to request that Our Company correct any information you believe is inaccurate. You also have the right to request Our Company to complete the information you believe is incomplete.
+        </li>
+        <li>
+            <em>The right to erasure</em> – You have the right to request that Our Company erase your personal data, under certain conditions.
+        </li>
+        <li>
+            <em>The right to restrict processing</em> – You have the right to request that Our Company restrict the processing of your personal data, under certain conditions.
+        </li>
+        <li>
+            <em> The right to object to processing</em> – You have the right to object to Our Company’s processing of your personal data, under certain conditions.
+        </li>
+        <li>
+            <em> The right to data portability</em> – You have the right to request that Our Company transfer the data that we have collected to another organization, or directly to you, under certain conditions.
+        </li>
+    </ul>
+    <p class="text-center"><a href="#top"> Back to top</a></p>
+</div>
+
+<div class="text-justify" id="cookies">
+    <h3> Cookies</h3>
+    <p>
+        Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our websites, we may collect information from you automatically through cookies or similar technology
+    </p><p>
+        For further information, visit <a href="http://allaboutcookies.org/">allaboutcookies.org</a>
+    </p>
+
+    <h4> How do we use cookies?</h4>
+    <p>
+        Our Company uses cookies in a range of ways to improve your experience on our website, including:
+    </p>
+    <ul class="text-center">
+        <li>
+            Keeping you signed in
+        </li>
+        <li>
+            Understanding how you use our website
+        </li>
+    </ul>
+
+    <h4>What types of cookies do we use? </h4>
+    <p> There are a number of different types of cookies, however, our website uses:</p>
+    <ul class="text-center">
+
+        <li> <em>Functionality</em> – Our Company uses these cookies so that we recognize you on our website and remember your previously selected preferences. These could include what language you prefer and location you are in. A mix of first-party and third-party cookies are used.</li>
+        <li>
+            <em>  Advertising  </em> – Our Company uses these cookies to collect information about your visit to our website, the content you viewed, the links you followed and information about your browser, device, and your IP address.
+        </li>
+    </ul>
+    <h4>   How to manage cookies</h4>
+    <p>  You can set your browser not to accept cookies, and the above website tells you how to remove cookies from your browser. However, in a few cases, some of our website features may not function as a result.</p>
+
+
+    <h4> Changes to our privacy policy</h4>
+    <p> Our Company keeps its privacy policy under regular review and places any updates on this web page. This privacy policy was last updated on 9 January 2019.</p>
+    <p class="text-center"><a href="#top"> Back to top</a></p>
+</div>  <div class="text-justify" id="contact">
+    <h3> How to contact us</h3>
+    <p>
+        If you have any questions about Our Company’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us.
+    </p>
+
+    <p> Email us at:</p>
+
+    <p>
+        Call us:
+    </p>
+
+    <p>   Or write to us at:</p>
+
+
+    <p class="text-center"><a href="#top"> Back to top</a></p>
 </div>
