--- a/WebApplication3/Views/AparatKategoria/Create.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>AparatKategoria</h4>
+<h4>Camera Categories</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,7 +29,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
