--- a/WebApplication3/Views/AparatKategoria/Edit.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Edit.cshtml
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
