--- a/WebApplication3/Views/AparatViewModel/Create.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Create.cshtml
@@ -58,7 +58,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
