--- a/WebApplication3/Views/AparatViewModel/Delete.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Delete.cshtml
@@ -64,6 +64,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Powrót do listy</a>
+        <a asp-action="Index">Back To List</a>
     </form>
 </div>
