--- a/WebApplication3/Views/AparatViewModel/Details.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Details.cshtml
@@ -62,6 +62,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
     <a asp-controller="AparatKategoria" asp-action="Menu">Powrót do Kategorii</a>
 </div>
