--- a/WebApplication3/Views/AparatViewModel/Edit.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Edit.cshtml
@@ -61,7 +61,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
