--- a/WebApplication3/Views/Bagnets/Create.cshtml
+++ b/WebApplication3/Views/Bagnets/Create.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
