--- a/WebApplication3/Views/Bagnets/Details.cshtml
+++ b/WebApplication3/Views/Bagnets/Details.cshtml
@@ -20,5 +20,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
