--- a/WebApplication3/Views/Bagnets/Edit.cshtml
+++ b/WebApplication3/Views/Bagnets/Edit.cshtml
@@ -26,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
