--- a/WebApplication3/Views/ObiektywViewModel/Create.cshtml
+++ b/WebApplication3/Views/ObiektywViewModel/Create.cshtml
@@ -74,7 +74,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
