--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Startowa";
+    ViewData["Title"] = "Start";
 }
 @section PageHead{
     <div class="container">
-        <h3>Witaj, to jest @ViewData["Title"] strona tej aplikacji</h3>
+        <h3>Hello, this is the @ViewData["Title"] page of the app</h3>
         <h4>Tu się wszystko zaczyna.</h4>
     </div>
 }
 @section PageFoot{
     <div class="container">
-        <h4>Jeśli chciałbyś się dowiedzieć czegoś więcej:</h4>
-        <h5>Pisz na <a href="mailto:name@email.com">Nasz adres mailowy!</a></h5>
-        <h5>Zadzwoń! <em>+48 555-555-555</em></h5>
+        <h4>If You are interested in more information</h4>
+        <h5>Write to <a href="mailto:name@email.com">our e-mail address</a></h5>
+        <h5>Call <em>+48 555-555-555</em></h5>
     </div>
 }
 <div class="text-center">
