--- a/WebApplication3/Views/AparatKategoria/Index.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WebApplication3.Models.AparatKategoria>
 
 @{
-    ViewData["Title"] = "Lista";
+    ViewData["Title"] = "List";
 }
 
 <h1>Lista</h1>
@@ -32,8 +32,8 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
