--- a/WebApplication3/Views/AparatViewModel/Index.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Index.cshtml
@@ -68,8 +68,8 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Usuń</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                 @Html.ActionLink("Dodaj do torby", "AddAparatToEquipmentBag", "EquipmentBag", new { id = item.Id })
             </td>
         </tr>
