--- a/WebApplication3/Views/Home/Aparaty_foto_podst.cshtml
+++ b/WebApplication3/Views/Home/Aparaty_foto_podst.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Fotografia tradycyjna - podstawy";
+    ViewData["Title"] = "Photography - Basics";
 }
 @section PageHead{
     <div class="container">
-        <h3>Temat tej strony to @ViewData["Title"]</h3>
-        <h4>Wyjaśnimy pojęcia takie, jak głębia ostości, przesłona itp...</h4>
+        <h3>The subkect of the page is @ViewData["Title"]</h3>
+        <h4>We'll explain some concepts, like depth of field, shutter, diaphragm...</h4>
     </div>
 }
 
@@ -20,7 +20,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <div class="text-center" style="height: 100%;">
     <h2 class="display-4">@ViewData["Title"]</h2>
-    <h5>Zapraszamy do zapoznania się z garścią faktów</h5>
+    <h5>A bunch of facts:</h5>
     <dl>
         <dt>Temat pierwszy</dt>
         <dd>@ViewBag.ValuePara1</dd>
