--- a/WebApplication3/Views/AparatViewModel/Index.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Index.cshtml
@@ -70,7 +70,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                @Html.ActionLink("Dodaj do torby", "AddAparatToEquipmentBag", "EquipmentBag", new { id = item.Id })
+                @Html.ActionLink("Add To Bag", "AddAparatToEquipmentBag", "EquipmentBag", new { id = item.Id })
             </td>
         </tr>
 }
