Added many new functions

--- a/WebApplication3/Views/AparatKategoria/Index.cshtml
+++ b/WebApplication3/Views/AparatKategoria/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "List";
 }
 
-<h1>Lista</h1>
+<h1>List</h1>
 
 <p>
-    <a asp-action="Create">Utwórz nowy</a>
+    <a asp-action="Create">Create</a>
 </p>
 <table class="table">
     <thead>
