--- a/WebApplication3/Views/AparatViewModel/Details.cshtml
+++ b/WebApplication3/Views/AparatViewModel/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Aparat</h4>
+    <h4>Camera</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -63,5 +63,5 @@
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back To List</a>
-    <a asp-controller="AparatKategoria" asp-action="Menu">Powrót do Kategorii</a>
+    <a asp-controller="AparatKategoria" asp-action="Menu">Back to categories</a>
 </div>
