--- a/WebApplication3/Views/Home/Aparaty_historia.cshtml
+++ b/WebApplication3/Views/Home/Aparaty_historia.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Historia aparatów fotograficznych";
+    ViewData["Title"] = "History of Photographic cameras";
 }
 @section PageHead{
     <div class="container">
-        <h3>Witaj, to jest @ViewData["Title"]</h3>
-        <h4>Tu dowiesz się conieco na ten temat.</h4>
+        <h3>Hello, this is @ViewData["Title"]</h3>
+        <h4>Here, You'll learn some things on the subject</h4>
     </div>
 }
 
 <div class="text-center">
     <h2 class="display-4">@ViewData["Title"]</h2>
-    <h5>Zapraszamy do zapoznania się z garścią faktów</h5>
+    <h5>A bunch of facts...</h5>
     <p>@ViewBag.ValuePara1</p>
 </div>
