--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @section PageHead{
     <div class="container">
         <h3>Hello, this is the @ViewData["Title"] page of the app</h3>
-        <h4>Tu się wszystko zaczyna.</h4>
+        <h4>Here is where it begins...</h4>
     </div>
 }
 @section PageFoot{
@@ -15,8 +15,8 @@
     </div>
 }
 <div class="text-center">
-    <h1 class="display-4">Witaj!</h1>
-    <h5>Zapraszamy do zapoznania się z naszą bazą informacji o <abbr title="Zwanych też, nie do końca słusznie 'analogowymi'">tradycyjnych</abbr> aparatach fotograficznych</h5>
+    <h1 class="display-4">Hello!!</h1>
+    <h5>We welcome you to get yourself acquanited with this database of information about <abbr title="Also, erroneously, called 'analogue'">traditional</abbr> photographic cameras</h5>
     <p>@ViewBag.ValuePara1</p>
     <p>@ViewBag.ValuePara1</p>
 
