--- a/WebApplication3/Views/Admin/Index.cshtml
+++ b/WebApplication3/Views/Admin/Index.cshtml
@@ -1,17 +1,22 @@
 ﻿@using Microsoft.AspNetCore.Identity;
+@inject UserManager<IdentityUser> UserManager;
 @model IEnumerable<IdentityUser>
-
+@{
+    IList<String> roles;
+}
 <h1 class="bg-info text-white">All Users</h1>
 <a asp-action="Create" class="btn btn-secondary">Create a User</a>
 
 <table class="table table-sm table-bordered">
-    <tr><th>ID</th><th>Name</th><th>Email</th><th>Update</th><th>Delete</th></tr>
+    <tr><th>ID</th><th>Name</th><th>Email</th><th>Admin</th><th>Update</th><th>Delete</th></tr>
     @foreach (IdentityUser user in Model)
     {
+        roles = await UserManager.GetRolesAsync(user);
         <tr>
             <td>@user.Id</td>
             <td>@user.UserName</td>
             <td>@user.Email</td>
+            <td>@roles.Contains("Admin").ToString()</td>
             <td>
                 <a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@user.Id">
                     Update
