--- a/WebApplication3/Views/Bagnets/Details.cshtml
+++ b/WebApplication3/Views/Bagnets/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Bagnet</h4>
+    <h4>Mount</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
