--- a/WebApplication3/Views/Home/Aparaty_foto_podst.cshtml
+++ b/WebApplication3/Views/Home/Aparaty_foto_podst.cshtml
@@ -4,7 +4,7 @@
 @section PageHead{
     <div class="container">
         <h3>The subkect of the page is @ViewData["Title"]</h3>
-        <h4>We'll explain some concepts, like depth of field, shutter, diaphragm...</h4>
+        <h4>We'll explain some concepts, like depth of field, shutter, aperture...</h4>
     </div>
 }
 
@@ -22,10 +22,10 @@
     <h2 class="display-4">@ViewData["Title"]</h2>
     <h5>A bunch of facts:</h5>
     <dl>
-        <dt>Temat pierwszy</dt>
-        <dd>@ViewBag.ValuePara1</dd>
-        <dt>Temat drugi</dt>
-        <dd>@ViewBag.ValuePara1</dd>
+        <dt>Depth of field (DOF)</dt>
+        <dd>For many cameras, depth of field (DOF) is the distance between the nearest and the farthest objects that are in acceptably sharp focus in an image. The depth of field can be calculated based on focal length, distance to subject, the acceptable circle of confusion size, and aperture. A particular depth of field may be chosen for technical or artistic purposes. </dd>
+        <dt>Exposure value (EV)</dt>
+        <dd>"In photography, exposure value (EV) is a number that represents a combination of a camera's shutter speed and f-number, such that all combinations that yield the same exposure have the same EV (for any fixed scene luminance). Exposure value is also used to indicate an interval on the photographic exposure scale, with a difference of 1 EV corresponding to a standard power-of-2 exposure step, commonly referred to as a stop.</dd>
 
 
     </dl>
@@ -46,12 +46,12 @@
         </button>
     </div>
     <dl>
-        <dt>Temat pierwszy</dt>
-        <dd>@ViewBag.ValuePara1</dd>
-        <dt>Temat drugi</dt>
-        <dd>@ViewBag.ValuePara1</dd>
-        <dt>Temat trzeci</dt>
-        <dd>@ViewBag.ValuePara1</dd>
+        <dt>Aperture</dt>
+        <dd>In optics, an aperture is a hole or an opening through which light travels. More specifically, the aperture and focal length of an optical system determine the cone angle of a bundle of rays that come to a focus in the image plane.</dd>
+        <dt>Shutter</dt>
+        <dd>In photography, a shutter is a device that allows light to pass for a determined period, exposing photographic film or a photosensitive digital sensor to light in order to capture a permanent image of a scene. </dd>
+        <dt>Sshutter speed</dt>
+        <dd>In photography, shutter speed or exposure time is the length of time when the film or digital sensor inside the camera is exposed to light, also when a camera's shutter is open when taking a photograph.[1] The amount of light that reaches the film or image sensor is proportional to the exposure time. ​1⁄500 of a second will let half as much light in as ​1⁄250.</dd>
 
     </dl>
 </div>
@@ -60,14 +60,14 @@
     <script>
         $(document).ready(function () {
 
-                $("#btnShowModal").click(function () {
-                    $("#calc_wrapper").modal('show');
-                });
-
-                $("#btnHideModal").click(function () {
-                    $("#calc_wrapper").modal('hide');
-                });
+            $("#btnShowModal").click(function () {
+                $("#calc_wrapper").modal('show');
             });
+
+            $("#btnHideModal").click(function () {
+                $("#calc_wrapper").modal('hide');
+            });
+        });
 
 
     </script>
