--- a/WebApplication3/Views/ObiektywViewModel/Index.cshtml
+++ b/WebApplication3/Views/ObiektywViewModel/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<WebApplication3.Models.ObiektywViewModel>
 
 @{
-    ViewData["Title"] = "Lista";
+    ViewData["Title"] = "List";
 }
 
-<h1>Lista</h1>
+<h1>List</h1>
 
 <p>
-    <a asp-action="Create">Utwórz nowy</a>
+    <a asp-action="Create">Create</a>
 </p>
 <table class="table">
     <thead>
