--- a/WebApplication3/Views/Shared/_MyLayout.cshtml
+++ b/WebApplication3/Views/Shared/_MyLayout.cshtml
@@ -7,7 +7,7 @@
 @{
 
     var BagStr = "";
-    var bag = Context.Session.Get<EquipmentBag>("expeditionBag");
+    var bag = Context.Session.Get<EquipmentBag>("EquipmentBag");
     IdentityUser user;
     IList<String> roles;
     if (bag != null)
