--- a/WebApplication3/Views/Shared/_MyLayout.cshtml
+++ b/WebApplication3/Views/Shared/_MyLayout.cshtml
@@ -71,7 +71,7 @@
                 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent box-shadow border-right mb-3 flex-sm-column-reverse">
                     <div class="container-fluid">
                         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-column-reverse">
-                            <ul class="navbar-nav flex-grow-1 flex-sm-column">
+                            <ul class="navbar-nav flex-grow-1 flex-sm-column" id="navbar">
                                 <li class="nav-item">
                                     <a class="nav-link text-warning" asp-area="" asp-controller="Home" asp-action="Index">Start</a>
                                 </li>
