--- a/WebApplication3/wwwroot/css/site.css
+++ b/WebApplication3/wwwroot/css/site.css
@@ -123,3 +123,13 @@ div#calculator {
     height: 100%;
     background-color: rgba(111, 111, 111, 0.5);
 }
+#navbar .nav-item:hover {
+    border-top: 1px solid white;
+    border-left: 1px solid white;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    filter: brightness(200%);
+    text-shadow: 3px 3px 3px rgba(206,89,55,0);
+}
+
+
