Added role management basics

--- a/WebApplication3/Views/Shared/_MyLayout.cshtml
+++ b/WebApplication3/Views/Shared/_MyLayout.cshtml
@@ -115,6 +115,12 @@
                                         <li class="nav-item">
                                             <a class="nav-link text-warning" asp-area="" asp-controller="Admin" asp-action="Create">Create A User</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-warning" asp-area="" asp-controller="Role" asp-action="Index">Administrate User Roles</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-warning" asp-area="" asp-controller="Role" asp-action="Create">Create A User Role</a>
+                                        </li>
 
                                     }
                                 }
