--- a/WebApplication3/Views/Admin/Create.cshtml
+++ b/WebApplication3/Views/Admin/Create.cshtml
@@ -17,10 +17,10 @@
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" />
     </div>
-    <div class="form-group form-check">
-        <label class="form-check-label">
-            <input class="form-check-input" asp-for="Admin" /> @Html.DisplayNameFor(model => model.Admin)
-        </label>
-    </div>
+    @* <div class="form-group form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" asp-for="Admin" /> @Html.DisplayNameFor(model => model.Admin)
+            </label>
+        </div>*@
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
